<?xml version="1.0" encoding="utf-8"?>


    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/boxOne"
            style="@style/WhiteBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/roboto"
            android:text="@string/box_one"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/boxTwo"
            style="@style/WhiteBox"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/box_two"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/boxOne" />

        <TextView
            android:id="@+id/boxThree"
            style="@style/WhiteBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/box_three"
            app:layout_constraintBottom_toTopOf="@+id/boxFour"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/boxTwo"
            app:layout_constraintTop_toTopOf="@+id/boxTwo" />

        <TextView
            android:id="@+id/boxFour"
            style="@style/WhiteBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/box_four"
            app:layout_constraintBottom_toTopOf="@+id/boxFive"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/boxTwo"
            app:layout_constraintTop_toBottomOf="@+id/boxThree" />

        <TextView
            android:id="@+id/boxFive"
            style="@style/WhiteBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/box_five"
            app:layout_constraintBottom_toBottomOf="@+id/boxTwo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/boxTwo"
            app:layout_constraintTop_toBottomOf="@+id/boxFour" />

        <TextView
            android:id="@+id/howToPlayLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/how_to_play_label"
            android:textSize="24sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/rules"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/rules"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/rules"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/howToPlayLabel"
            app:layout_constraintTop_toBottomOf="@+id/boxTwo"
            app:layout_constraintVertical_bias="0.01999998" />

        <Button
            android:id="@+id/buttonRed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:backgroundTint="@android:color/holo_red_light"
            android:text="@string/button_red"
            app:layout_constraintBaseline_toBaselineOf="@+id/buttonYellow"
            app:layout_constraintEnd_toStartOf="@+id/buttonYellow"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/buttonYellow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@android:color/holo_orange_light"
            android:text="@string/button_yellow"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/buttonGreen"
            app:layout_constraintStart_toEndOf="@+id/buttonRed"
            app:layout_constraintTop_toBottomOf="@+id/rules"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/buttonGreen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:backgroundTint="@android:color/holo_green_light"
            android:text="@string/button_green"
            app:layout_constraintBaseline_toBaselineOf="@+id/buttonYellow"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/buttonYellow" />

    </androidx.constraintlayout.widget.ConstraintLayout>
